# Prefect_MINIO

./: .dockerignore  .env.example  .gitignore  Projet_2_1_MLFactory.md  Projet_3_0_Prefect_MLFactory.md  Projet_3_1_Monitoring.md  README.md  docker-compose.broker.yml  docker-compose.yml  pytest.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: deploy_docker.yml  documentation.yml  ruff.yml  secrets.yml  test.yml
docs/: pyproject.toml
docs/source/: conf.py
monitoring/: docker-compose.monitoring.yaml  docker-compose.uptime.yml
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/dashboards/definitions/: API_health.json
monitoring/prometheus/: prometheus.yml
src/app_api/: Dockerfile  main.py  pyproject.toml  worker.py
src/app_api/modules/: load_model.py  modele_reg.py
src/app_front/: .dockerignore  Dockerfile  app.py  pyproject.toml
src/app_train/: .env.exemple  Dockerfile  docker_compose.prefect.yml  prefect.yaml  pyproject.toml  train.py
src/app_train/services/: def_model.py  prep_data_iris.py
tests/: conftest.py  test_api_load_model.py  test_api_main.py  test_api_modele_reg.py  test_api_true.py  test_front_app.py  test_front_true.py  test_train_def_model.py  test_train_prep_data_iris.py  test_train_train.py  test_train_true.py
